crates/nash-report/tests/parse/declaration/snapshots/parse__declaration__trait___trait_method_requires_signature.snap
---
source: crates/nash-report/tests/parse/declaration/trait_.rs
assertion_line: 25
description: "trait Eq 'a where\n    eq a = true\n"
info: diagnostic
---
nash::syntax

  × Expected `:` after the method name.
   ╭─[src/Main.nash:2:8]
 1 │ trait Eq 'a where
 2 │     eq a = true
   ·        ─
   ╰────
  help: Separate the method name and its type with `:`.
