crates/nash-report/tests/parse/declaration/snapshots/parse__declaration__trait___trait_requires_uppercase_name.snap
---
source: crates/nash-report/tests/parse/declaration/trait_.rs
assertion_line: 10
description: "trait eq 'a where"
info: diagnostic
---
nash::syntax

  × Expected a trait name.
   ╭─[src/Main.nash:1:7]
 1 │ trait eq 'a where
   ·       ─
   ╰────
  help: Use an uppercase name, such as `Eq`.
